k8s/observability/monitoring/ticket-metrics-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-stats-exporter
  namespace: monitoring
  labels:
    release: monitoring
spec:
  selector:
    matchLabels:
      app: ticket-stats-exporter
  template:
    metadata:
      labels:
        app: ticket-stats-exporter
        release: monitoring
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9187"
    spec:
      containers:
      - name: exporter
        # The standard Postgres Exporter image
        image: prometheuscommunity/postgres-exporter:v0.18.1
        ports:
        - containerPort: 9187
        volumeMounts:
        - name: queries
          mountPath: /etc/config
        args:
          - "--no-collector.wal"
          - "--no-collector.process_idle"
          - "--no-collector.stat_bgwriter"
      volumes:
      - name: queries
        configMap:
          name: ticket-sql-queries
