k8s/observability/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Force SSL so it redirects HTTP -> HTTPS automatically
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: monitor.aniljaiswar.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
